# mnist-ocr

./: LICENSE  Makefile  NOTES.md  README.md  dvc.yaml  params.yaml  pyproject.toml  setup.py
.dvc/: config
.github/workflows/: cml.yml
data/: .gitignore  external.dvc
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
reports/: evaluate.json
src/data/: make_dataset.py
src/models/: evaluate_model.py  train_model.py
src/visualization/: visualize.py
