[tool.poetry]
name = "mnist-ocr"
version = "0.1.0"
description = ""
authors = ["Blesswin Samuel <blesswinsamuel@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
tensorflow = "^2.9.1"
idx2numpy = "^1.2.3"
click = "^8.1.3"
sklearn = "^0.0"
dvclive = "^0.9.0"

[tool.poetry.dev-dependencies]
dvc = {extras = ["azure"], version = "^2.11.0"}
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
